ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-simple-websites-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /web1
            pathType: Prefix
            backend:
              service:
                name: my-simple-website-service
                port:
                  number: 80
          - path: /web2
            pathType: Prefix
            backend:
              service:
                name: my-simple-website2-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-simple-website-service
                port:
                  number: 80
